--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 06:39:00 PM</p>
+    <p class="lastupdate">09/14/2020 06:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.6&#176;F</td>
+        <td class="data">78.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.6&#176;F</td>
+        <td class="data">78.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.6&#176;F</td>
+        <td class="data">78.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.7&#176;F</td>
+        <td class="data">44.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">30%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.934 inHg (0.033)</td>
+        <td class="data">29.930 inHg (0.029)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph S (180&#176;)</td>
+        <td class="data">6 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.7&#176;F</td>
+        <td class="data">81.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 3 hours, 52 minutes</td>
+      <td class="data">13 days, 3 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 3 hours, 52 minutes</td>
+      <td class="data">13 days, 3 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
