--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 06:59:00 PM</p>
+    <p class="lastupdate">09/14/2020 07:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.0&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.0&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.0&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.0&#176;F</td>
+        <td class="data">43.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.930 inHg (0.022)</td>
+        <td class="data">29.928 inHg (0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph SSW (202&#176;)</td>
+        <td class="data">4 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.7&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 4 hours, 12 minutes</td>
+      <td class="data">13 days, 4 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 4 hours, 12 minutes</td>
+      <td class="data">13 days, 4 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
