--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 09:24:00 PM</p>
+    <p class="lastupdate">09/14/2020 09:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.2&#176;F</td>
+        <td class="data">68.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.2&#176;F</td>
+        <td class="data">68.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.2&#176;F</td>
+        <td class="data">68.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.5&#176;F</td>
+        <td class="data">44.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">41%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.974 inHg (0.044)</td>
+        <td class="data">29.975 inHg (0.042)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 6 hours, 37 minutes</td>
+      <td class="data">13 days, 6 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 6 hours, 37 minutes</td>
+      <td class="data">13 days, 6 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
