--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 10:29:00 PM</p>
+    <p class="lastupdate">09/14/2020 10:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.7&#176;F</td>
+        <td class="data">64.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.7&#176;F</td>
+        <td class="data">64.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.7&#176;F</td>
+        <td class="data">64.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.6&#176;F</td>
+        <td class="data">44.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">48%</td>
+        <td class="data">49%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.998 inHg (0.065)</td>
+        <td class="data">29.999 inHg (0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="10:25:02 PM">
-            29.999</span><br/>
+          <span title="10:31:02 PM">
+            30.000</span><br/>
           <span title="03:24:02 PM">
             29.898</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:25:02 PM (Monday)">
-            29.999</span><br/>
+          <span title="10:31:02 PM (Monday)">
+            30.000</span><br/>
           <span title="02:56:02 PM (Sunday)">
             29.833</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 7 hours, 42 minutes</td>
+      <td class="data">13 days, 7 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 7 hours, 42 minutes</td>
+      <td class="data">13 days, 7 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
